# demo_agent

./: .gitignore  pyproject.toml
tasklib/: __init__.py  cli.py  project.py  store.py  task.py  utils.py
tests/: test_project.py  test_store.py  test_task.py
